simple-bank/eks/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api

spec:
  replicas: 1 # number of pods to run from this template
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 105745650186.dkr.ecr.us-east-2.amazonaws.com/simplebank:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
